--- a/EMS.UI/Views/Shared/_Layout.cshtml
+++ b/EMS.UI/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,14 +16,32 @@
     <link href="~/assets/css/style.css" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
+    <script src="~/assets/js/jquery.min.js"></script>
+    <script src="~/assets/js/bootstrap.js"></script>
+    <script type="text/javascript" src="~/assets/js/slick.js"></script>
+    <script type="text/javascript" src="~/assets/js/jquery.mixitup.js"></script>
+    <script type="text/javascript" src="~/assets/js/jquery.fancybox.pack.js"></script>
+    <script src="~/assets/js/waypoints.js"></script>
+    <script src="~/assets/js/jquery.counterup.js"></script>
+    <script type="text/javascript" src="~/assets/js/wow.js"></script>
+    <script type="text/javascript" src="~/assets/js/bootstrap-progressbar.js"></script>
+    <script type="text/javascript" src="~/assets/js/custom.js"></script>
+
+    <script src="~/assets/js/angular.js"></script>
+    <script src="~/assets/js/angular-route.js"></script>
+    <script src="~/assets/js/angular-resource.js"></script>
+    <script src="~/assets/js/application/app.js"></script>
+
+
 </head>
-<body>
+<body ng-app="_emsApp">
     <div id="preloader">
         <div id="status">&nbsp;</div>
     </div>
     <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
     <header id="header">
-       
+
         <div class="header-top">
             <div class="container">
                 <form action="">
@@ -190,21 +208,6 @@
             </div>
         </div>
     </footer>
-    <script src="~/assets/js/jquery.min.js"></script>
-    <script src="~/assets/js/bootstrap.js"></script>
-    <script type="text/javascript" src="~/assets/js/slick.js"></script>
-    <script type="text/javascript" src="~/assets/js/jquery.mixitup.js"></script>
-    <script type="text/javascript" src="~/assets/js/jquery.fancybox.pack.js"></script>
-    <script src="~/assets/js/waypoints.js"></script>
-    <script src="~/assets/js/jquery.counterup.js"></script>
-    <script type="text/javascript" src="~/assets/js/wow.js"></script>
-    <script type="text/javascript" src="~/assets/js/bootstrap-progressbar.js"></script>
-    <script type="text/javascript" src="~/assets/js/custom.js"></script>
-    
-    <script src="~/assets/js/angular.js"></script>
-    <script src="~/assets/js/angular-route.js"></script>
-    <script src="~/assets/js/angular-resource.js"></script>
-
 </body>
 </html>
 
