--- a/EMS.UI/Views/Test/Index.cshtml
+++ b/EMS.UI/Views/Test/Index.cshtml
@@ -1,5 +1,6 @@
-﻿
-<section id="contact">
+﻿<script src="~/assets/js/controllers/TestController.js"></script>
+
+<section id="contact" ng-controller="mycntlr">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -9,7 +10,7 @@
                             <div class="contact-area-right">
                                 <form action="" class="comments-form contact-form">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Your Name">
+                                        <input type="text" class="form-control" placeholder="Your Name" >
                                     </div>
                                     <div class="form-group">
                                         <input type="email" class="form-control" placeholder="Email">
