--- a/EMS.UI/Views/Test/Index.cshtml
+++ b/EMS.UI/Views/Test/Index.cshtml
@@ -10,18 +10,19 @@
                             <div class="contact-area-right">
                                 <form action="" class="comments-form contact-form">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Your Name" >
+                                        <input type="text" class="form-control" placeholder="Your Name" ng-model="Name" >
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email">
+                                        <input type="email" class="form-control" placeholder="Email" ng-model="Email">
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Subject">
+                                        <input type="text" class="form-control" placeholder="Subject" ng-model="Subject">
                                     </div>
                                     <div class="form-group">
-                                        <textarea placeholder="Comment" rows="3" class="form-control"></textarea>
+                                        <textarea placeholder="Comment" rows="3" class="form-control" ng-model="Comment"></textarea>
                                     </div>
-                                    <button class="comment-btn">Submit Comment</button>
+                                    <button class="comment-btn" ng-click="SaveData()">Submit Comment</button>
+
                                 </form>
                             </div>
                         </div>
