--- a/EMS.UI/assets/css/style.css
+++ b/EMS.UI/assets/css/style.css
@@ -45,8 +45,8 @@ body,html{
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 16px;
+	font-family: Calibri;
+	font-size: 12px;
 	overflow-x: hidden !important;
 	color: #838282;
 }
