--- a/EMS.UI/Views/Test/Index.cshtml
+++ b/EMS.UI/Views/Test/Index.cshtml
@@ -8,104 +8,78 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="contact-area-right">
-                                <form action="" class="comments-form contact-form">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Your Name" ng-model="Name" >
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email" ng-model="Email">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Subject" ng-model="Subject">
-                                    </div>
-                                    <div class="form-group">
-                                        <textarea placeholder="Comment" rows="3" class="form-control" ng-model="Comment"></textarea>
-                                    </div>
-                                    <button class="comment-btn" ng-click="SaveData()">Submit Comment</button>
-                              
 
-                                    @***@
-                                    <div id="gridSystemModal" class="modal fade " tabindex="-1" role="dialog" aria-labelledby="gridModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog " >
-                                           @* role="document"*@
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                    <h4 class="modal-title" id="gridModalLabel">View Details</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <div class="container-fluid bd-example-row">
-                                                        <div class="row">
-                                                            <table class="table-bordered table-striped col-lg-12">
-                                                                <thead>
-                                                                    <tr >
-                                                                        <th class="col-lg-2">Name</th>
-                                                                        <th class="col-lg-2">Email</th>
-                                                                        <th class="col-lg-2">Subject</th>
-                                                                        <th class="col-lg-4">Comment</th>
-                                                                        <th class="col-lg-2">Edit / Delete</th>
-                                                                    </tr>
+                                <div class="row">
+                                    <table class="table table-bordered table-striped col-lg-12">
+                                        <thead>
+                                            <tr>
+                                                <th class="col-lg-2">Name</th>
+                                                <th class="col-lg-2">Email</th>
+                                                <th class="col-lg-2">Subject</th>
+                                                <th class="col-lg-4">Comment</th>
+                                                <th class="col-lg-2"></th>
+                                            </tr>
 
 
-                                                                </thead>
-                                                                <tbody>
-                                                                    <tr ng-repeat="testdata in testdata" >
-                                                                        @*<td ><span ng-bind="testdata.EmailVm"></td>*@
-                                                                        <td >{{testdata.NameVm}}</td>
-                                                                        <td>{{testdata.EmailVm}}</td>
-                                                                        <td>{{testdata.SubjectVm}}</td>
-                                                                        <td>{{testdata.CommentVm}}</td>
-                                                                        <td >
-                                                                            <button >Edit</button>
-                                                                            <button>Delete</button>
-                                                                        </td>
-                                                                        
-                                                                    </tr>
-                                                                </tbody>
-                                                            </table>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="testdata in testdata">
+                                                <td>{{testdata.NameVm}}</td>
+                                                <td>{{testdata.EmailVm}}</td>
+                                                <td>{{testdata.SubjectVm}}</td>
+                                                <td>{{testdata.CommentVm}}</td>
+                                                <td>
+                                                   <button type="button" class="comment-btn" data-toggle="modal" data-target="#gridSystemModal" ng-click="EditDetails(testdata)">EDIT</button>
+                                                    <button  class="comment-btn" >Delete</button>
+                                                </td>
 
-                                                           @* <div class="col-md-4 col-md-offset-4">.col-md-4 .col-md-offset-4</div>*@
-                                                        </div>
-                                                       
-                                                    </div>
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                    @*<button type="button" class="btn btn-primary">Save changes</button>*@
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                 
-                                         <button type="button" class="comment-btn" data-toggle="modal" data-target="#gridSystemModal"ng-click="GetDetails()">
-                                             View
-                                         </button>
-                                    
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <button type="button" class="comment-btn" data-toggle="modal" data-target="#gridSystemModal">Add New Item</button>
 
-
-
-
-                                    @***@
-
-
-
-
-                                  
-                                             
-                                    
-                                  
-
-
-
-                              
-
-
-
-
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="gridSystemModal" class="modal fade " tabindex="-1" role="dialog" aria-labelledby="gridModalLabel" aria-hidden="true">
+        <div class="modal-dialog ">
+            @* role="document"*@
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="gridModalLabel">View Details</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid bd-example-row">
+
+                        <form action="" class="comments-form contact-form">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Your Name" ng-model="Name">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" placeholder="Email" ng-model="Email">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Subject" ng-model="Subject">
+                            </div>
+                            <div class="form-group">
+                                <textarea placeholder="Comment" rows="3" class="form-control" ng-model="Comment"></textarea>
+                            </div>
+                            <button class="comment-btn" ng-click="SaveData()">{{ButtonText}}</button>
+                        </form>
+
+
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    @*<button type="button" class="btn btn-primary">Save changes</button>*@
                 </div>
             </div>
         </div>
