--- a/EMS.UI/Views/Test/Index.cshtml
+++ b/EMS.UI/Views/Test/Index.cshtml
@@ -60,18 +60,22 @@
 
                         <form action="" class="comments-form contact-form">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Your Name" ng-model="Name">
+                                <input type="text"id="NameTxt" class="form-control" placeholder="Your Name" ng-model="Name">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" placeholder="Email" ng-model="Email">
+                                <input type="email"id="EmailTxt" class="form-control" placeholder="Email" ng-model="Email">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Subject" ng-model="Subject">
+                                <input type="text"id="SubTxt" class="form-control" placeholder="Subject" ng-model="Subject">
                             </div>
                             <div class="form-group">
-                                <textarea placeholder="Comment" rows="3" class="form-control" ng-model="Comment"></textarea>
+                                <textarea placeholder="Comment" id="CommTxt"  rows="3" class="form-control" ng-model="Comment"></textarea>
                             </div>
-                            <button class="comment-btn" ng-click="SaveData()">{{ButtonText}}</button>
+                           <input type="button" class="comment-btn" ng-click="SaveData()" value="{{ButtonText}}" />
+                            <input type="button" class="comment-btn" ng-click="DeleteData()" value="Delete"/>
+                          
+                            <input type="button" class="comment-btn" ng-click="Reset()" value="Reset"/>
+
                         </form>
 
 
