--- a/EMS.UI/Views/Test/Index.cshtml
+++ b/EMS.UI/Views/Test/Index.cshtml
@@ -13,10 +13,11 @@
                                     <table class="table table-bordered table-striped col-lg-12">
                                         <thead>
                                             <tr>
+                                                <th class="col-lg-2">ID</th>
                                                 <th class="col-lg-2">Name</th>
                                                 <th class="col-lg-2">Email</th>
                                                 <th class="col-lg-2">Subject</th>
-                                                <th class="col-lg-4">Comment</th>
+                                                <th class="col-lg-2">Comment</th>
                                                 <th class="col-lg-2"></th>
                                             </tr>
 
@@ -24,18 +25,24 @@
                                         </thead>
                                         <tbody>
                                             <tr ng-repeat="testdata in testdata">
+                                                <td>{{testdata.IDVm}}</td>
                                                 <td>{{testdata.NameVm}}</td>
                                                 <td>{{testdata.EmailVm}}</td>
                                                 <td>{{testdata.SubjectVm}}</td>
                                                 <td>{{testdata.CommentVm}}</td>
                                                 <td>
                                                    <button type="button" class="comment-btn" data-toggle="modal" data-target="#gridSystemModal" ng-click="EditDetails(testdata)">EDIT</button>
-                                                    <button  class="comment-btn" >Delete</button>
+                                               
+                                                    <button type="button" class="comment-btn"data-toggle="modal"data-target="#delete "ng-click="DeleteData(testdata)" >Delete</button>
+                                                   
+                                                    @*data-target="#delete"*@ 
                                                 </td>
 
                                             </tr>
                                         </tbody>
                                     </table>
+
+                                    <input type="hidden" ng-model="testdata.NameVm" />
                                     <button type="button" class="comment-btn" data-toggle="modal" data-target="#gridSystemModal">Add New Item</button>
 
                                 </div>
@@ -60,6 +67,10 @@
 
                         <form action="" class="comments-form contact-form">
                             <div class="form-group">
+                                <input type="text " id="ID" class="form-control " placeholder="ID" ng-model="ids"readonly>
+                            </div>
+
+                            <div class="form-group">
                                 <input type="text"id="NameTxt" class="form-control" placeholder="Your Name" ng-model="Name">
                             </div>
                             <div class="form-group">
@@ -72,8 +83,7 @@
                                 <textarea placeholder="Comment" id="CommTxt"  rows="3" class="form-control" ng-model="Comment"></textarea>
                             </div>
                            <input type="button" class="comment-btn" ng-click="SaveData()" value="{{ButtonText}}" />
-                            <input type="button" class="comment-btn" ng-click="DeleteData()" value="Delete"/>
-                          
+                                                     
                             <input type="button" class="comment-btn" ng-click="Reset()" value="Reset"/>
 
                         </form>
@@ -82,10 +92,33 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="comment-btn" data-dismiss="modal" ng-click="GetDetails()">Close</button>
                     @*<button type="button" class="btn btn-primary">Save changes</button>*@
                 </div>
             </div>
         </div>
     </div>
+
+
+    @*For deletete Confirmation*@
+    <div class="modal fade" id="delete">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content col-lg-8">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">Delete Confirmation</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Do you want to delete the record ?&hellip;</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="comment-btn" data-dismiss="modal"ng-click="ConfirmDelete()">Yes</button>
+                    <button type="button" class="comment-btn">No</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
 </section>
