basic functions completed

--- a/EMS.UI/Views/Test/Index.cshtml
+++ b/EMS.UI/Views/Test/Index.cshtml
@@ -43,7 +43,7 @@
                                     </table>
 
                                     <input type="hidden" ng-model="testdata.NameVm" />
-                                    <button type="button" class="comment-btn" data-toggle="modal" data-target="#gridSystemModal">Add New Item</button>
+                                    <button type="button" class="comment-btn" data-toggle="modal" data-target="#gridSystemModal" ng-click="AddNewItem()">Add New Item</button>
 
                                 </div>
                             </div>
@@ -59,7 +59,7 @@
             @* role="document"*@
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"ng-click="Close()"><span aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="gridModalLabel">View Details</h4>
                 </div>
                 <div class="modal-body">
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="comment-btn" data-dismiss="modal" ng-click="GetDetails()">Close</button>
+                    <button type="button" class="comment-btn" data-dismiss="modal" ng-click="Close()">Close</button>
                     @*<button type="button" class="btn btn-primary">Save changes</button>*@
                 </div>
             </div>
