--- a/EMS.UI/assets/css/style.css
+++ b/EMS.UI/assets/css/style.css
@@ -142,6 +142,14 @@ img{
 /*--------------------*/
 /* HEADER */
 /*--------------------*/
+.toast-custom {
+    top: 20px;
+    right: 30px;
+}
+
+#toast-container > .toast-success {
+    background-color: #45b6af;
+}
 
 #header{
 	float: left;
