--- a/EMS.UI/Views/EmployeeRegistration/Index.cshtml
+++ b/EMS.UI/Views/EmployeeRegistration/Index.cshtml
@@ -8,8 +8,8 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="slide-article">
-                                <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Creative Design & Best Feature</h1>
-                                <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
+                                <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Employee Management System</h1>
+                                <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Demo Project</p>
                                 <a class="read-more-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" href="#">Read More</a>
                             </div>
                         </div>
@@ -29,8 +29,8 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="slide-article">
-                                <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">We are Best Team & Support you always</h1>
-                                <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since</p>
+                                <h1 class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">Employee Management System</h1>
+                                <p class="wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.75s">Demo Project</p>
                                 <a class="read-more-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" href="#">Read More</a>
                             </div>
                         </div>
