--- a/EMS.UI/Views/EmployeeRegistration/EmployeeRegistration.cshtml
+++ b/EMS.UI/Views/EmployeeRegistration/EmployeeRegistration.cshtml
@@ -33,8 +33,11 @@
                         <div class=" form-group ">
                             <label class="control-label col-md-3" for="DOB">DOB</label>
                             <div class='input-group date  col-md-6 '>
-                                <input type='text' id="DOB" ng-model="Dob" class="form-control input-md" /><i class="fa fa-calendar"> </i>
-
+                                @*<input type='text' id="DOB" ng-model="Dob" class="form-control input-md" /><i class="fa fa-calendar"> </i>*@
+                                <input type="text" class="form-control" />
+                                <span class="input-group-addon">
+                                    <i class="fa fa-calendar></i>
+                                </span>
                             </div>
                         </div>
 
