--- a/EMS.UI/Views/Shared/_Layout.cshtml
+++ b/EMS.UI/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
             <div class="container">
                 <form action="">
                     <div id="search">
-                        <input type="text" placeholder="Type your search keyword here and hit Enter..." name="s" id="m_search" style="display: inline-block;">
+                        <input type="text" placeholder="Type your search keyword here and hit Enter..." name="s" id="BtnSearch" style="display: inline-block;">
                         <button type="submit">
                             <i class="fa fa-search"></i>
                         </button>
